--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS; Database=ERPatientHistory; Trusted_Connection=True; MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\SQLEXPRESS; Database=ERPatientHistory; Trusted_Connection=True; MultipleActiveResultSets=true; TrustServerCertificate=True"
   }
 }
